--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,11 +28,10 @@
 
 
 
-
-    <string name="textNoun">Noun</string>
-    <string name="textviewPreposition">Preposition</string>
-    <string name="textVerb">Verb</string>
-    <string name="textPronouns">Pronouns</string>
-
+    <!--<string name="textNoun">Noun</string>-->
+    <!--<string name="textviewPronouns">Pronouns</string>-->
+    <!--<string name="textviewPreposition">Preposition</string>-->
+    <!--<string name="textVerb">Verb</string>-->
+    <!--<string name="textConcepts">Concepts</string>-->
 
 </resources>
